[package]
name = "tini"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/tini"
repository = "https://github.com/EthanJustice/tini"
license = "MIT"
publish = false

[dependencies]
clap = "~2.33.3"
serde = { version = "~1.0.116", features = ["derive"] }
serde_json = "~1.0.58"
url = "~2.1.1"